<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="Add New Task"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.finalversion.ui.home.HomeFragment"
        android:label="@string/menu_tasks"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_blankTaskSettingsFragment"
            app:destination="@id/blankTaskSettingsFragment" />
        <action
            android:id="@+id/action_nav_home_to_subtaskSettingsFragment"
            app:destination="@id/subtaskSettingsFragment" />
        <action
            android:id="@+id/action_nav_home_to_habitSubtaskSettingsFragment"
            app:destination="@id/habitSubtaskSettingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.finalversion.ui.gallery.GalleryFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.finalversion.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_leaderboard"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/blankTaskSettingsFragment"
        android:name="com.example.finalversion.taskSettings.BlankTaskSettingsFragment"
        android:label="Add A New Task"
        tools:layout="@layout/fragment_blank_task_settings" >
        <action
            android:id="@+id/action_blankTaskSettingsFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/subtaskSettingsFragment"
        android:name="com.example.finalversion.subtaskSettings.SubtaskSettingsFragment"
        android:label="Add A New Subtask"
        tools:layout="@layout/fragment_subtask_settings">
        <action
            android:id="@+id/action_subtaskSettingsFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <argument
            android:name="taskParentName"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/habitSubtaskSettingsFragment"
        android:name="com.example.finalversion.subtaskSettings.HabitSubtaskSettingsFragment"
        android:label="Add A New Subtask"
        tools:layout="@layout/fragment_habit_subtask_settings">
        <action
            android:id="@+id/action_habitSubtaskSettingsFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <argument
            android:name="habitTaskParentName"
            app:argType="string" />
    </fragment>
</navigation>